--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
+                   
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -54,7 +54,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#portfolio">Project</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
@@ -308,7 +308,7 @@ I graduated from TATUNG University in Taiwan with a Bachelor's degree in industr
                         <div class="modal-body">
                             <h2>LOGO DESIGN</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cabin.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/cabin-1.jpg" class="img-responsive img-centered" alt="">
                             <div class="logo" style="font-family:Microsoft JhengHei;">
                             <p>以貓頭鷹象徵自己，並以期為主軸衍生出具有智慧，
                             <br>
@@ -337,7 +337,7 @@ I graduated from TATUNG University in Taiwan with a Bachelor's degree in industr
                         <div class="modal-body">
                             <h2>OPSIDE BASKET</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/cake-1.jpg" class="img-responsive img-centered" alt="">
                             <div class="logo" style="font-family:Microsoft JhengHei;">
                             <p>
                                 本產品利用側邊收納式抽屜結構為主，讓主婦可依食材的軟硬度或食材的種類擺放於菜籃空間裡，不必擔心在買菜的過程中食材受擠壓而變形，<br>讓主婦用有舒服且自在的採購時間。
@@ -365,7 +365,7 @@ I graduated from TATUNG University in Taiwan with a Bachelor's degree in industr
                         <div class="modal-body">
                             <h2>MASK OF HAZE</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/circus.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/circus-1.jpg" class="img-responsive img-centered" alt="">
                             <div class="logo" style="font-family:Microsoft JhengHei;">
                             <p>
                                 以花包為造型的客製化口罩成型機，利用3D攝影機掃描技術，
@@ -394,7 +394,7 @@ I graduated from TATUNG University in Taiwan with a Bachelor's degree in industr
                         <div class="modal-body">
                             <h2>GYRO TEA</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/game.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/game-1.jpg" class="img-responsive img-centered" alt="">
                             <div class="logo" style="font-family:Microsoft JhengHei;">
                             <p>以陀螺為造型之陶製泡茶器，當茶葉於熱水中釋放的同時，茶色便會依循孔洞流於水中，此時期茶色就好比是陀螺的律動，讓泡茶增添了不少的樂趣。</p>
                             </div>
@@ -420,7 +420,7 @@ I graduated from TATUNG University in Taiwan with a Bachelor's degree in industr
                         <div class="modal-body">
                             <h2>ALL IN ONE</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/safe.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/safe-1.jpg" class="img-responsive img-centered" alt="">
                             <div class="logo" style="font-family:Microsoft JhengHei;">
                             <p>
                             為了解決身障者無法獨自上下公車的困擾，且考慮夜間更安全的上下車環境，改良現今公車的活動式坡道，使低地板公車的無障礙空間更為完善，<br>提出了"all in one"公車門設計方案。    
@@ -448,7 +448,7 @@ I graduated from TATUNG University in Taiwan with a Bachelor's degree in industr
                         <div class="modal-body">
                             <h2>SHADOW LOVE</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/submarine.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/submarine-1.jpg" class="img-responsive img-centered" alt="">
                             <div class="logo" style="font-family:Microsoft JhengHei;">
                             <p>
                                 以捲紙比擬為雲更代表陰影，以燈光比為太陽亦象徵愛，藉由變換捲紙的位置，透過光線，拼湊出令人嘆為觀止的圖案。
